--- a/app/Resources/translations/messages.es.xliff
+++ b/app/Resources/translations/messages.es.xliff
@@ -14,6 +14,10 @@
                 <source>btn.back</source>
                 <target>Volver</target>
             </trans-unit>
+           <trans-unit id="btn.send">
+                <source>btn.send</source>
+                <target>Enviar</target>
+            </trans-unit>
 
             <trans-unit id="login.company_name">
                 <source>login.company_name</source>
