User can edit comment

--- a/app/Resources/translations/messages.es.xliff
+++ b/app/Resources/translations/messages.es.xliff
@@ -19,6 +19,11 @@
                 <target>Enviar</target>
             </trans-unit>
 
+           <trans-unit id="label.edited">
+                <source>label.edited</source>
+                <target>Editado</target>
+            </trans-unit>
+
             <trans-unit id="login.company_name">
                 <source>login.company_name</source>
                 <target>kveo</target>
@@ -92,6 +97,16 @@
                  <source>media.no_posts_found</source>
                  <target>No se han encontrado coincidencias</target>
              </trans-unit>
+
+             <trans-unit id="comment.edit">
+                 <source>comment.edit</source>
+                 <target>Editar comentario</target>
+             </trans-unit>
+             <trans-unit id="comment.wrote">
+                <source>comment.wrote</source>
+                <target>escribió: </target>
+             </trans-unit>
+
         </body>
     </file>
 </xliff>
