--- a/app/Resources/FOSUserBundle/translations/FOSUserBundle.es.yml
+++ b/app/Resources/FOSUserBundle/translations/FOSUserBundle.es.yml
@@ -45,8 +45,9 @@ change_password:
 registration:
     check_email: Se ha enviado un email a %email%. Contiene un enlace de activación que debes presionar para activar tu cuenta.
     confirmed: Felicidades %username%, tu cuenta está ahora confirmada.
-    back: Volver a la página original.
-    submit: Registrar
+    back: Entrar en kveo
+    submit: Enviar
+    register: Nuevo en kveo?   Regístrate
     flash:
         user_created: El usuario se ha creado satisfactoriamente
     email:
