User now can valorate medias

--- a/app/Resources/translations/messages.es.xliff
+++ b/app/Resources/translations/messages.es.xliff
@@ -18,6 +18,10 @@
                 <source>btn.send</source>
                 <target>Enviar</target>
             </trans-unit>
+            <trans-unit id="btn.valoration">
+                <source>btn.valoration</source>
+                <target>Valoración</target>
+            </trans-unit>
 
            <trans-unit id="link.back.home">
                 <source>link.back.home</source>
