--- a/app/Resources/translations/messages.es.xliff
+++ b/app/Resources/translations/messages.es.xliff
@@ -26,6 +26,11 @@
                 <source>btn.contact.submit</source>
                   <target>Enviar formulario de contacto</target>
                </trans-unit>
+              <trans-unit id="btn.add_state">
+                <source>btn.add_state</source>
+                  <target>Añadir estado</target>
+               </trans-unit>
+
 
            <trans-unit id="link.back.home">
                 <source>link.back.home</source>
@@ -366,6 +371,11 @@
                 <source>message</source>
                   <target>Mensaje</target>
                </trans-unit>
+               <trans-unit id="state.form.title">
+                <source>state.form.title</source>
+                  <target>Cambiar estado de </target>
+               </trans-unit>
+
 
               <trans-unit id="contact.message">
                 <source>contact.message</source>
